fix lists - fix nested lists - better handling of inline maths - fix box icons shrinking - fix missing padding when no title is present - do not show summary when no title is present

--- a/css/katex.css
+++ b/css/katex.css
@@ -141,7 +141,6 @@
 }
 .katex {
   font: normal 1.1em KaTeX_Main, Times New Roman, serif;
-  line-height: 2em;
   text-indent: 0;
   text-rendering: auto;
   border-color: currentColor;
